Fixed the spacing between the 4 pictures.

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,22 @@
 }
 
 #fourpictures{
-	margin-top: 70px;
-	padding: 5px;
+	margin-top: 50px;
+	padding: 17px;
+
+
+
+
+	
 }
 .thumbnail{
 	padding: 0;
+	margin-top: 0;
+	margin-bottom: 2px;
+}
+.no-gutter [class*="-6"] {
+	padding-left: 0px;
+	padding-right: 2px;
+	padding-bottom: -20px;
+	padding-top: 0px;
 }
